--- a/Tailwind CSS Tips/05 Tip.html
+++ b/Tailwind CSS Tips/05 Tip.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>Tailwind CSS Tips - Highlight</title>
+    <title>Tailwind CSS Tips - first Letter</title>
 </head>
 <body>
     <br><br>    <br><br>
